# se-toolkit-lab-7

./: README.md  docker-compose.yml  modifycation.txt  modyfications.txt
bot/: .env.bot.example  Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  backend_handlers.py  base.py  natural_language.py
bot/handlers/commands/: __init__.py
bot/services/: __init__.py  intent_router.py  llm_client.py  lms_client.py
